test/visibility/import/edgeCases/dontLeakSymbols1-proc.good
dontLeakSymbols1-proc.chpl:18: In function 'main':
dontLeakSymbols1-proc.chpl:19: error: cannot find 'foo' in module 'C'
